# package-registry

./: .gitignore  Makefile  README.md  pyvenv.cfg  requirements.txt
.github/workflows/: build_download-package-service.yaml  build_fetch-directory-service.yaml  build_fetch-history-service.yaml  build_ingest-package-service.yaml  build_main-service.yaml  build_query-cost-service.yaml  build_rate-package-service.yaml  build_reset-system-service.yaml  build_search-package-service.yaml  build_update-package-service.yaml  build_upload-package-service.yaml  deploy-app-server-dev.yaml  deploy-app-server-prod.yaml  deploy-download-package-service-dev.yaml  deploy-download-package-service-prod.yaml  deploy-download-package-service-staging.yaml  (+42 more)
Scripts/: activate  activate.bat
app-server/: Dockerfile  app-server.rst  delivery-pipeline.yaml  requirements.txt  skaffold.yaml  target-dev.yaml  target-prod.yaml  target-staging.yaml
documentation/: README.txt
server/: Cargo.toml  README.md  cloc_files.json  metrics.ndjson  output1.txt  output2.txt  run  temp_metric.json
server/sample/test_url/: resulturl_1.txt  resulturl_2.txt  testurl_1.txt  testurl_2.txt
server/src/: inputs.rs  lib.rs  main.rs  resulturl.txt  testurl.txt
server/src/inputs/: commands.rs
server/src/inputs/commands/: cloc_files.json  correctness.py  metric_busfactor.py  metric_license.py  metrics.json  metrics.rs  pr_fraction.py  pr_gql.py  rampup.py  responsive.py  valid_url.py
server/test/: trial.txt
web-server/: app.yaml  package-lock.json  package.json  server.js  web-server.rst
(+152 files in other folders)
